Fixed spacing for the mobile pg

--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 .main-pg, .services-pg {
-	width: 98%;
+	width: 100%;
 }
 
 header {
@@ -91,6 +91,7 @@ header {
     header {
         height: 40%;
         flex-flow: column-reverse nowrap;
+        margin: 0%;
     }
 }
 
@@ -112,7 +113,8 @@ header nav {
 @media (max-width: 500px) {
     header nav {
         flex-flow: column nowrap;
-        justify-content: space-between;
+        justify-items: center;
+        align-items: center;
     }
 }
 
@@ -124,9 +126,12 @@ header nav a {
 @media (max-width: 500px) {
     header nav a {
         width: 100%;
-        height: 100%;
         text-align: center;
         border-top: 1px solid lightgray;
+        padding: 16px;
+    }
+
+    header nav a:last-child {
         border-bottom: 1px solid lightgray;
     }
 }
@@ -184,7 +189,7 @@ header nav a {
 
 @media (max-width: 500px) {
     .catchphrase button {
-        width: 40%;
+        width: 30%;
         height: 20%;
     }
 }
@@ -213,6 +218,8 @@ header nav a {
 @media (max-width: 500px) {
     .features, .about {
         width: 100%;
+        margin: 0%;
+        margin: 15px 0px;
     }
 }
 
@@ -247,6 +254,7 @@ header nav a {
 @media (max-width: 500px) {
     .services, .product, .vision {
         width: 100%;
+        margin: 15px 0px;
     }
 }
 
